- Fixed bug #52573 (SplFileObject::fscanf Segmentation fault)